--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,47 +1,69 @@
 # wrangler.toml
-name = "ai-daily"
+name = "ai-insight-daily"
 main = "src/index.js" # <-- Important: path to your main worker script
 compatibility_date = "2025-05-20" # Or your project's compatibility date
 workers_dev = true
 
 kv_namespaces = [
-  { binding = "DATA_KV", id = "kv数据库的ID" }
+  { binding = "DATA_KV", id = "ce2132d3672144798745b8405203171a" }
 ]
 
 [vars]
-IMG_PROXY = ""  #图片代理链接，用于处理图片不显示
+IMG_PROXY = "http://proxy.zjyyy.top/"  #图片代理链接，用于处理图片不显示
 OPEN_TRANSLATE = "true"
-USE_MODEL_PLATFORM = "GEMINI" #GEMINI, OPEN
-GEMINI_API_KEY = "xxxxxx-xxxxxx"
-GEMINI_API_URL = "https://api-proxy.me/gemini" #网上公共的代理api
-DEFAULT_GEMINI_MODEL = "gemini-2.5-flash-preview-05-20"
-OPENAI_API_KEY = "sk-xxxxxx" # Replace with your actual OpenAI API Key
-OPENAI_API_URL = "https://api.deepseek.com" # Or your OpenAI compatible API URL
-DEFAULT_OPEN_MODEL = "deepseek-chat"
-FOLO_COOKIE_KV_KEY = "folo_auth_cookie" 
+USE_MODEL_PLATFORM = "OPEN" #GEMINI, OPEN
+GEMINI_API_KEY = "sk-cOA9sWYfw6WTV4Di3dlngZuIwrcu6ig6pDAqHW8vdAPgY6HH"
+GEMINI_API_URL = "https://wzw.pp.ua" #网上公共的代理api
+DEFAULT_GEMINI_MODEL = "GLM-4.5-thinking"
+OPENAI_API_KEY = "sk-cOA9sWYfw6WTV4Di3dlngZuIwrcu6ig6pDAqHW8vdAPgY6HH" # Replace with your actual OpenAI API Key
+OPENAI_API_URL = "https://wzw.pp.ua" # Or your OpenAI compatible API URL
+DEFAULT_OPEN_MODEL = "claude-haiku-4-5-20251001"
+FOLO_COOKIE_KV_KEY = "folo_auth_cookie"
 FOLO_DATA_API = "https://api.follow.is/entries"
 FOLO_FILTER_DAYS = 1
-NEWS_AGGREGATOR_LIST_ID = "158437828119024640" 
-NEWS_AGGREGATOR_FETCH_PAGES = "1" 
-HGPAPERS_LIST_ID = "158437917409783808"
+# 新闻聚合列表ID，用于从Folo获取新闻聚合数据
+NEWS_AGGREGATOR_LIST_ID = "91900797979011072"
+
+# HuggingFace论文订阅源ID，用于获取HuggingFace上的论文数据
+HGPAPERS_FEED_ID = "91900797979011072"
+
+# Twitter列表ID，用于获取Twitter上的AI相关动态
+TWITTER_LIST_ID = "91900797979011072"
+
+# AI Base订阅源ID，用于获取AI Base网站的内容
+AIBASE_FEED_ID = "91900797979011072"
+
+# 小虎AI资讯订阅源ID，用于获取小虎AI资讯的内容
+XIAOHU_FEED_ID = "91900797979011072"
+
+# Reddit列表ID，用于获取Reddit上AI相关的讨论
+REDDIT_LIST_ID = "91900797979011072"
+
+# HuggingFace论文列表ID，用于获取HuggingFace上的论文数据（与FEED_ID功能类似）
+HGPAPERS_LIST_ID = "91900797979011072"
+
+NEWS_AGGREGATOR_FETCH_PAGES = "1"
 HGPAPERS_FETCH_PAGES = "1"
-TWITTER_LIST_ID = "153028784690326528" 
-TWITTER_FETCH_PAGES = "1" 
-REDDIT_LIST_ID = "167576006499975168" 
-REDDIT_FETCH_PAGES = "1" 
+TWITTER_FETCH_PAGES = "1"
+AIBASE_FETCH_PAGES = "2"
+
+XIAOHU_FETCH_PAGES = "2"
+
+
+REDDIT_FETCH_PAGES = "1"
 PROJECTS_API_URL = "https://git-trending.justlikemaki.vip/topone/?since=daily"
 GITHUB_TOKEN = "github_pat_xxxxxx"
 GITHUB_REPO_OWNER = "justlovemaki"
 GITHUB_REPO_NAME = "CloudFlare-AI-Insight-Daily"
 GITHUB_BRANCH = "main"
 LOGIN_USERNAME = "root"
-LOGIN_PASSWORD = "toor"
+LOGIN_PASSWORD = "root"
 DAILY_TITLE = "AI洞察日报"
 DAILY_TITLE_MIN = " `AI 日报` "
-PODCAST_TITLE = "来生小酒馆"
-PODCAST_BEGIN = "嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077"
+PODCAST_TITLE = "拎着自己飞呀"
+PODCAST_BEGIN = "嘿，欢迎收听新一期的来生情报站"
 PODCAST_END = "今天的情报就到这里，注意隐蔽，赶紧撤离"
 BOOK_LINK = ""
 INSERT_FOOT = "false"
 INSERT_AD = "false"
-INSERT_APP_URL = "<h3>[查看完整版AI日报↗️ https://ai.hubtoday.app/](https://ai.hubtoday.app/)</h3>"
+#INSERT_APP_URL = "<h3>[查看完整版AI日报↗️ https://ai.hubtoday.app/](https://ai.hubtoday.app/)</h3>"
